--- a/pages/cellularautomata.html
+++ b/pages/cellularautomata.html
@@ -52,7 +52,7 @@
             Controls.pixelsize = ControlsLib.automatas.pixelSize(
                 $('.pixel-size'),  updateHash
             );
-            Controls.ruleid = ControlsLib.automatas.pixelSize(
+            Controls.ruleid = ControlsLib.automatas.pixelId(
                 $('.rule-selector'), FA.numOfRules-1, updateHash
             );
 
