--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="mylink-container">
                         <p class="mylink"><a href="/pages/cellularautomata.html">Interactive model</a></p>
                         <p class="mylink"><a href="/pages/cellularautomataconstructor.html">Constructor</a></p>
-                        <p class="mylink"><a href="/pages/gol.html">The Game of Life</a></p>
+                        <p class="mylink"><a href="/pages/gameoflife.html">The Game of Life</a></p>
                     </div>
                 </div>
 
