--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                         <p class="mylink"><a href="/pages/koch.html">Koch</a></p>
                         <p class="mylink"><a href="/pages/cesaro.html">Cesaro</a></p>
                         <p class="mylink"><a href="/pages/quad.html">Quadratic</a></p>
+                        <p class="mylink"><a href="/pages/julia.html">Julia Set</a></p>
 <!-- <p class="mylink">Double slit experiment</p> -->
                     </div>
                 </div>
