--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div class="col-sm-4 main-section-column">
                     <h3 class="main-section-header">Finite Automata</h3>
                     <div class="mylink-container">
+                        <p class="mylink"><a href="/pages/cellularautomatacatalogue.html">Catalogue</a></p>
                         <p class="mylink"><a href="/pages/cellularautomata.html">Interactive model</a></p>
                         <p class="mylink"><a href="/pages/cellularautomataconstructor.html">Constructor</a></p>
                         <p class="mylink"><a href="/pages/gameoflife.html">The Game of Life</a></p>
